# polypwas

./: .gitignore  README.md  pyproject.toml
analyses/: README.md  toy_assoc.sh
analyses/datasets/: .gitignore
analyses/indiv-level/: compute_var_explained.py  eval_accuracy.py  extract_genotype.py  run_prediction.py
analyses/pqtl-compilation/: convert_to_parquet.py  make_pqtl_count.py
analyses/pwas-analysis/: analyze_hotspot.py  compute_coreg.py  compute_coreg_scores.py  compute_ppc_pwas.py  compute_pwas.py  compute_validation.py
analyses/validation/: compile_validation_data.py  compute_validation_stats.py
data/: extract_hm3_example_data.py
src/polypwas/: __init__.py  __main__.py  cli.py  config.py  demo.py  example_data.py  ld.py  plot.py  pwas.py  resource.py  sbayesrc.py  stats.py  store.py  utils.py
tests/: test_blockwgt.py  test_cli_demo.py  test_example_data.py  test_smoke.py
