[project]
name = "polypwas"
version = "0.1.0"
description = "Proteome-wide association studies with cis and trans pQTL weights"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
full = [
    "statsmodels",
    "submitit>=1.5.4",
    "pyarrow>=21.0.0",
    "pgenlib>=0.93.0",
    "scikit-learn>=1.6.1",
]
plot = ["matplotlib"]
dev = ["pytest", "ruff"]

[project.scripts]
polypwas = "polypwas.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polypwas"]

[tool.ruff]
line-length = 100
